--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "^5.0@alpha",
     "drupal/workflow_participants": "^2.4",
+    "os2forms/os2forms": "^3.4",
     "webmozart/path-util": "^2.3",
     "zaporylie/composer-drupal-optimizations": "^1.2"
   },
@@ -80,6 +81,9 @@
       "drupal/coc_forms_auto_export": {
         "3240592 - Problem with phpseclib requirement in 2.x (https://www.drupal.org/project/coc_forms_auto_export/issues/3240592)": "https://www.drupal.org/files/issues/2021-10-04/requirement-namespace-3240592-1.patch"
       }
+    },
+    "branch-alias": {
+      "dev-composer_cleanup": "2.6.0"
     }
   },
   "scripts": {
