--- a/composer.json
+++ b/composer.json
@@ -61,25 +61,16 @@
   },
   "extra": {
     "composer-exit-on-patch-failure": true,
-    "patchLevel": {
-      "test": "-p2"
-    },
     "enable-patching": true,
-    "patcher": {
-      "force-reset": true
-    },
     "patches": {
-      "drupal/entity_print": {
-        "2733781 - Add Export to Word Support": "https://www.drupal.org/files/issues/2019-11-22/2733781-47.patch"
-      },
-      "drupal/webform": {
-        "Unlock possibility of using Entity print module export to Word": "https://www.drupal.org/files/issues/2020-02-29/3096552-6.patch"
-      },
       "drupal/user_default_page": {
         "Warning: in_array() expects parameter 2 to be array, null given in user_default_page_user_logout() (https://www.drupal.org/node/3246986)": "https://www.drupal.org/files/issues/2021-11-01/user_default_page-3246986-2.patch"
       },
       "drupal/coc_forms_auto_export": {
         "3240592 - Problem with phpseclib requirement in 2.x (https://www.drupal.org/project/coc_forms_auto_export/issues/3240592)": "https://www.drupal.org/files/issues/2021-10-04/requirement-namespace-3240592-1.patch"
+      },
+      "drupal/dynamic_entity_reference": {
+        "entityQuery reference JOINs should specify target_type (https://www.drupal.org/project/dynamic_entity_reference/issues/3120952#comment-14141038) - required by drupal/workflow_participants": "https://www.drupal.org/files/issues/2021-06-22/entityquery-reference-joins-should-specify-target_type-3120952-24.patch"
       }
     }
   },
