--- a/composer.json
+++ b/composer.json
@@ -69,8 +69,9 @@
       "drupal/coc_forms_auto_export": {
         "3240592 - Problem with phpseclib requirement in 2.x (https://www.drupal.org/project/coc_forms_auto_export/issues/3240592)": "https://www.drupal.org/files/issues/2021-10-04/requirement-namespace-3240592-1.patch"
       },
+      "//": "Note: drupal/dynamic_entity_reference is required by drupal/workflow_participants",
       "drupal/dynamic_entity_reference": {
-        "entityQuery reference JOINs should specify target_type (https://www.drupal.org/project/dynamic_entity_reference/issues/3120952#comment-14141038) - required by drupal/workflow_participants": "https://www.drupal.org/files/issues/2021-06-22/entityquery-reference-joins-should-specify-target_type-3120952-24.patch"
+        "entityQuery reference JOINs should specify target_type (https://www.drupal.org/project/dynamic_entity_reference/issues/3120952#comment-14141038)": "https://www.drupal.org/files/issues/2021-06-22/entityquery-reference-joins-should-specify-target_type-3120952-24.patch"
       }
     }
   },
