--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   },
   "require": {
     "cweagans/composer-patches": "^1.6.5",
+    "dompdf/dompdf": "^2.0",
     "drupal/admin_toolbar": "^3.0",
     "drupal/chosen": "^2.10",
     "drupal/ckeditor_a11ychecker": "2.0.0-alpha1",
@@ -40,7 +41,7 @@
     "drupal/r4032login": "^2.1",
     "drupal/simple_ldap": "1.0.0-alpha3",
     "drupal/simplesamlphp_auth": "^3.2",
-    "drupal/switch_page_theme": "1.x-dev#ac38137f43cc72a8efba04bc127b87fbf2c28e06",
+    "drupal/switch_page_theme": "^4.0",
     "drupal/telephone_validation": "^2.2",
     "drupal/ultimate_cron": "^2.0.0",
     "drupal/user_default_page": "^2.1",
@@ -54,6 +55,9 @@
     "os2forms/os2forms": "^3.3",
     "webmozart/path-util": "^2.3",
     "zaporylie/composer-drupal-optimizations": "^1.2"
+  },
+  "suggest": {
+      "itk-dev/os2forms_digital_post": "Send digital post"
   },
   "require-dev": {
     "drupal/coder": "^8.3",
