Added missing dependency

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
     "drupal/webform_scheduled_tasks": "^2.0",
     "drupal/webform_views": "^5.0@alpha",
     "drupal/workflow_participants": "^2.4",
+    "itk-dev/os2forms_digital_post": "dev-feature/FORMS-821-data-lookup as 2.1",
     "os2forms/os2forms": "^3.7",
     "webmozart/path-util": "^2.3",
     "zaporylie/composer-drupal-optimizations": "^1.2"
